Added detailed profiler description in README.txt